<resources>
    <string name="app_name">Lab2_03</string>
    <string name="nhap_ten">Nhập tên:</string>
    <string name="nhap">Nhập</string>
    <string name="qlnv">Quản lý nhân viên</string>
    <string name="manv">Mã NV:</string>
    <string name="tennv">Tên NV:</string>
    <string name="loainv">Loại NV:</string>
    <string name="chinhthuc">Chính thức</string>
    <string name="thoivu">Thời vụ</string>
    <string name="nhapnv">Nhập NV</string>
    <string name="id">ID:</string>
    <string name="full_name">Full Name:</string>
    <string name="is_manager">Is A Manager:</string>
    <string name="staff">Staff</string>
    <string name="add">Add</string>
</resources>